# skuld-mod-manager

./: DESIGN_SYSTEM.md  FEATURE_ROADMAP.md  PKGBUILD  README.md  index.html  package-lock.json  package.json
docs/: sod2-mod-loading-debug.md
scripts/: diagnose-sod2.sh
src/: App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/games/definitions/: cyberpunk2077.json  kingdomcome.json  sod2.json  stardewvalley.json  valheim.json  witcher3.json
src-tauri/icons/: icon.icns
src-tauri/src/: archive.rs  config.rs  conflicts.rs  db.rs  dependencies.rs  deploy.rs  detection.rs  diagnostics.rs  downloader.rs  lib.rs  main.rs  plugins.rs  process.rs  sync.rs  update_check.rs
src-tauri/src/games/: mod.rs  sod2.rs  witcher3.rs
src/components/: AddGameDialog.tsx  BackupRestoreDialog.tsx  DeleteModDialog.tsx  DetectSavesDialog.tsx  DiagnosticsDialog.tsx  EditGameDialog.tsx  ImportModDialog.tsx  ModCard.tsx  ModInfoDialog.tsx  ModList.tsx  ProfileDialog.tsx  RemoveGameDialog.tsx  SaveScanner.tsx  Settings.tsx  Sidebar.tsx  Titlebar.tsx  ToastContainer.tsx
src/styles/: globals.css
