[package]
name = "skuld-mod-manager"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = "2"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = "2"
sevenz-rust = "0.6"
thiserror = "1"
walkdir = "2"
uuid = { version = "1", features = ["v4"] }
dirs = "5"

[dev-dependencies]
tempfile = "3"
