[package]
name = "skuld-mod-manager"
version = "0.2.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = "2"
sevenz-rust = "0.6"
thiserror = "1"
walkdir = "2"
uuid = { version = "1", features = ["v4"] }
dirs = "5"
reqwest = { version = "0.12", features = ["rustls-tls", "json", "stream"], default-features = false }
tokio = { version = "1", features = ["rt", "macros"] }
lazy_static = "1"
futures-util = "0.3"
rusqlite = { version = "0.31", features = ["bundled"] }
sysinfo = "0.38.4"
tauri-plugin-autostart = "2.5.1"

[dev-dependencies]
tempfile = "3"
